<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/logo_zizo"
            android:layout_gravity="center"
            android:layout_marginTop="-20dp"/>

        <EditText
            android:id="@+id/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nh_p_t_n_t_i_kho_n"
            android:layout_gravity="center"
            android:width="350dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/PassWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nh_p_password"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:width="350dp"
            android:layout_marginTop="20dp"/>

        <CheckBox
            android:id="@+id/saveUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:shadowColor="@color/sky"
            android:text="@string/l_u_t_i_kho_n_v_m_t_kh_u"/>

        <Button
            android:id="@+id/signIn_Click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ng_nh_p"
            android:background="@drawable/background_button_2"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ng_k"
            android:background="@drawable/background_button_2"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>